move nvram and header to n.js and h.js

--- a/src/tmp-romfs/ROM/HTMLs/AccessNumber.html
+++ b/src/tmp-romfs/ROM/HTMLs/AccessNumber.html
@@ -1,6 +1,6 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script></head><script>th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
+th=pp()
 head(th,'Dialing access number')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
