--- a/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
@@ -1,8 +1,7 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
-<script src=file://rom/JS/BuildInfo.js></script>
-</head><script>th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
+<script src=file://rom/JS/BuildInfo.js></script></head><script>
+th=pp()
 head(th,'About this HackTV build','','FridayEvilArr',5);
 </script><table>
 <tr><td width=20><td valign=top align=right width=120><shadow>Client ROM:</shadow>
