--- a/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
@@ -1,9 +1,7 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/htv-cSetup.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
-</head><form name=t><input type=hidden name=h value=&pname;></form>
-<script>th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
+<script src=file://rom/JS/htv-cSetup.js></script></head><script>
+th=pp()
 head(th,'Connect Setup v2.6','','karTV',5);
 window.onload=uS;
 </script><form name=c action=client:ConfirmConnectSetup>
