--- a/src/tmp-romfs/ROM/HTMLs/HTMLv2.html
+++ b/src/tmp-romfs/ROM/HTMLs/HTMLv2.html
@@ -1,7 +1,6 @@
-<html><head><display nooptions noscroll allowoffline noreconnectalert></head>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
-<script>th=pp()
+<html><head><display nooptions noscroll allowoffline noreconnectalert>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
+th=pp()
 head(th,'HTML Sandbox v2.0')
 </script><spacer width=1 height=5 type=block>
 <script>function hV(){
