--- a/src/tmp-romfs/ROM/HTMLs/HackTV.html
+++ b/src/tmp-romfs/ROM/HTMLs/HackTV.html
@@ -1,7 +1,6 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
-</head><script>th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
+th=pp()
 bgm=gBGM(z_nv)
 head(th,'Welcome to HackTV','',bgm,-1)
 function doMenu(){d.ua.vu.value=d.ua.um[d.ua.um.selectedIndex].value}
