--- a/src/tmp-romfs/ROM/HTMLs/Themes.html
+++ b/src/tmp-romfs/ROM/HTMLs/Themes.html
@@ -1,6 +1,5 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
 <script>th=pp()
 function sBG(c){sB(z_nv,0,c)}
 </script></head><script>head(th,'Theme Settings','large','world1',5);</script>
