--- a/src/tmp-romfs/ROM/HTMLs/BGM.html
+++ b/src/tmp-romfs/ROM/HTMLs/BGM.html
@@ -1,7 +1,6 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
-</head><script>th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
+th=pp()
 bgm=gV(z_nv,1)
 function doSubmit(c){if(c){sB(z_nv,1,c)}}
 function doLoad(){document.r.l.selectedIndex=bgm}
