--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
@@ -1,10 +1,9 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
-<script>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script><script>
 r=d.referrer
 if(r==rom+'HTMLs/Themes.html'||r==rom+'HTMLs/PhoneCallWaitThresh.html'||r==rom+'HTMLs/BGM.html'||r==rom+'HTMLs/NVRAM.html'){go(r)}
-</script></head><script>th=pp()
+</script></head><script>
+th=pp()
 head(th,'Phone & Dialing Settings','large','Ghosttown')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=14><td colspan=3><td abswidth=20 height=1>
