--- a/src/level0-romfs/ROM/HTMLs/HackTV.html
+++ b/src/level0-romfs/ROM/HTMLs/HackTV.html
@@ -22,7 +22,7 @@ window.onload = doMenu;
 <tr>
 <td abswidth=10>&nbsp;</td>
 <td colspan=3>
-
+ 
 <table>
 <tr>
 <td width=190 valign=top align=left>
@@ -37,8 +37,8 @@ window.onload = doMenu;
 <li><a href=BGM.html onmouseover="setMsg('                            Choose from several available background music for the HackTV Homepage.')">BGM Settings</a>
 <li><a href=TechInfoInternal.html onmouseover="setMsg('                            This page allows you to view technical information about your box. Identify the build version, ssid, and other relevant information.')">Tech Info</a>
 <li><a href=HTMLv2.html onmouseover="setMsg('                            This page allows you to play with the HTML and Javascript features of this build by offering a sandbox to play in.')">HTML Sandbox v2</a>
-<li><a href=file://rom/InternalOnly/DiskHax.html onmouseover="setMsg('                            Browse and manipulate your &boxname;'s Hard Disk Partitions')">DiskHax</a>
-<li><a href=file://rom/InternalOnly/VFatHax.html onmouseover="setMsg('                            Browse and manipulate your &boxname;'s Hard Disk files')">VFatHax</a>
+<li><a href=file://rom/InternalOnly/DiskHax.html onmouseover="setMsg('                            Browse, create, and delete your &boxname;\'s Hard Disk Partitions.')">DiskHax</a>
+<li><a href=file://rom/InternalOnly/VFatHax.html onmouseover="setMsg('                            Browse your &boxname;\'s Hard Disk files, including HackTV content.')">VFatHax</a>
 <li><a href=client:showautodisk onmouseover="setMsg('                            Click here to attempt to re-trigger AutoDisk to extract the Disk Data from ROM, helpful if you are missing pages or having trouble loading HackTV assets.')">Show AutoDisk</a>
 <tr>
 <td>
