add themes to @SKCro's credits

--- a/src/level0-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/level0-romfs/ROM/HTMLs/BuildInfo.html
@@ -38,7 +38,7 @@ Brought to you by the efforts of:<br>
 - zefie (coding, packing, distribution)<br>
 - Outa (rev engineering, hw discoveries)<br>
 - FairPlay137 (MAME development)<br>
-- SKCro (design, optimization)<br>
+- SKCro (themes, design, optimization)<br>
 - WebTV Discord (for the lulz)<br>
 <tr>
 <td height=4>
