go go gadget shitty optimization: the sequel
this isn't done yet

--- a/src/tmp-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
@@ -1,23 +1,14 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline noreconnectalert>
+<html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://rom/JS/htv-header.js></script>
 <script src=file://rom/JS/NVRAM.js></script>
-</head>
-<script>
-th = pp();
-head(th, 'Advanced dialing options');
-</script>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td abswidth=34>
-<td colspan=3>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td valign=center absheight=40>
-</table>
+</head><script>
+th=pp();
+head(th,'Advanced dialing options');
+</script><table cellspacing=0 cellpadding=0>
+<tr><td abswidth=34><td colspan=3>
+<spacer height=40 type=vertical>
 <td abswidth=20>
-<TR>
+<tr>
 <td>
 <td width=240 height=220 valign=top align=left>
 <table cellspacing=0 cellpadding=0>
