--- a/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
@@ -1,38 +1,20 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline noreconnectalert>
+<html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://rom/JS/htv-header.js></script>
 <script src=file://rom/JS/NVRAM.js></script>
 <script src=file://rom/JS/BuildInfo.js></script>
-</head>
-<script>
-th = pp()
+</head><script>
+th=pp()
 head(th,'About this HackTV build','','FridayEvilArr',5);
-</script>
-
-<table>
-<tr>
-<td width=20>
-<td valign=top align=right width=120><shadow>Client ROM:</shadow>
-<td width=10>
-<td valign=top>Version &wtv-appvers;-<script>d.write(bI('version'));</script>
-<tr>
-<td>
-<td valign=top align=right><shadow>ROM Type:</shadow>
-<td width=10>
-<td valign=top><script>d.write(bI('romtype'));</script>
-<tr>
-<td>
-<td valign=top align=right><shadow>ROM Pack Date:</shadow>
-<td width=10>
-<td valign=top><script>d.write(bI('packed_date'));</script>
-<tr>
-<td height=10>
-<tr>
-<td>
-<td valign=top align=right><shadow>Credits:</shadow>
-<td width=10>
-<td valign=top height=180>
+</script><table>
+<tr><td width=20><td valign=top align=right width=120><shadow>Client ROM:</shadow>
+<td width=10><td valign=top>Version &wtv-appvers;-<script>d.write(bI('version'));</script>
+<tr><td><td valign=top align=right><shadow>ROM Type:</shadow>
+<td width=10><td valign=top><script>d.write(bI('romtype'));</script>
+<tr><td><td valign=top align=right><shadow>ROM Pack Date:</shadow>
+<td width=10><td valign=top><script>d.write(bI('packed_date'));</script>
+<tr><td height=10>
+<tr><td><td valign=top align=right><shadow>Credits:</shadow>
+<td width=10><td valign=top height=180>
 Brought to you by the efforts of:<br>
 - eMac (rommy, rev engineering, much more)<br>
 - MattMan69 (themes, design, layout)<br>
@@ -41,11 +23,8 @@ Brought to you by the efforts of:<br>
 - FairPlay137 (MAME development)<br>
 - SKCro (themes, design, optimization)<br>
 - WebTV Discord (for the lulz)<br>
-<tr>
-<td height=4>
+<tr><td height=4>
 </table>
 <hr>
 <table>
-<tr>
-<td width=600 align=right>
-<form action='javascript:goHTV()'><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
+<tr><td width=600 align=right><form action='javascript:goHTV()'><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
