--- a/src/level0-romfs/ROM/HTMLs/AccessNumber.html
+++ b/src/level0-romfs/ROM/HTMLs/AccessNumber.html
@@ -1,43 +1,23 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
+<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
 <script src=file://rom/h.js></script><script src=file://rom/n.js></script>
-</head>
-<script>
-th = pp();
-head(th, 'Dialing access number')
-</script>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td abswidth=34>
-<td colspan=3>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td valign=center absheight=40>
-</table>
+</head><script>
+th=pp()
+head(th,'Dialing access number')
+</script><table cellspacing=0 cellpadding=0>
+<tr><td abswidth=34><td colspan=3>
+<spacer height=40 type=vertical>
 <td abswidth=20>
-<TR>
-<td>
-<td width=198 height=195 valign=top align=left>
-If WebTV customer service has provided you with a special access number,
-type that number here.
+<tr><td>
+<td width=198 height=195 valign=top align=left>If you were provided with with a special access number, type that number here.
 <p>Leave the space blank to use the WebTV access number nearest to you.
-<td width=20>
-<td width=198 valign=top align=left>
+<td width=20><td width=198 valign=top align=left>
 <form action=client:ConfirmPhoneSetup>
 <font size=-1>Access number:</font>
 <p><input type=hidden name=autosubmit value=true autosubmit=onleave>
 <input type=text name=AccessNumber size=20 maxlength=31 bgcolor=#444444 text=#ffdd33 cursor=#cc9933 numbers selected value='&anum;'>
 </table>
 <table width=550>
-<tr>
-<td colspan=4 height=4 valign=top align=left><hr>
-<tr>
-<td colspan=4 height=20 valign=top align=left>
-<tr>
-<td>
-<td colspan=3 valign=top align=right>
-<script>butt(th, 'Done', 'Done', 103)</script>
+<tr><td colspan=4 height=4 valign=top align=left><hr>
+<tr><td colspan=4 height=20 valign=top align=left>
+<tr><td><td colspan=3 valign=top align=right><script>butt(th, 'Done', 'Done', 103)</script>
 </form>
-<td>
-</table>
