--- a/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
@@ -1,22 +1,12 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
-</head>
-<script>
-th = pp();
-head(th, 'Advanced dialing options');
-</script>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td abswidth=34>
-<td colspan=3>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td valign=center absheight=40>
-</table>
+<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
+th=pp();
+head(th,'Advanced dialing options');
+</script><table cellspacing=0 cellpadding=0>
+<tr><td abswidth=34><td colspan=3>
+<spacer height=40 type=vertical>
 <td abswidth=20>
-<TR>
+<tr>
 <td>
 <td width=240 height=220 valign=top align=left>
 <table cellspacing=0 cellpadding=0>
