--- a/src/tmp-romfs/ROM/HTMLs/AccessNumber.html
+++ b/src/tmp-romfs/ROM/HTMLs/AccessNumber.html
@@ -1,7 +1,6 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script></head><script>
-th=pp()
+<script src=file://rom/JS/NVRAM.js></script></head><script>th=pp()
 head(th,'Dialing access number')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
@@ -14,10 +13,9 @@ head(th,'Dialing access number')
 <form action=client:ConfirmPhoneSetup>
 <font size=-1>Access number:</font>
 <p><input type=hidden name=autosubmit value=true autosubmit=onleave>
-<input type=text name=AccessNumber size=20 maxlength=31 bgcolor=#444444 text=#ffdd33 cursor=#cc9933 numbers selected value='&anum;'>
+<input type=text name=AccessNumber size=20 maxlength=31 bgcolor=444444 text=ffdd33 cursor=cc9933 numbers selected value=&anum;>
 </table>
 <table width=550>
 <tr><td colspan=4 height=4 valign=top align=left><hr>
 <tr><td colspan=4 height=20 valign=top align=left>
-<tr><td><td colspan=3 valign=top align=right><script>butt(th, 'Done', 'Done', 103)</script>
-</form>
+<tr><td><td colspan=3 valign=top align=right><script>butt(th,'Done','Done',103)</script></form>
