--- a/src/tmp-romfs/ROM/HTMLs/Connecting.html
+++ b/src/tmp-romfs/ROM/HTMLs/Connecting.html
@@ -1,27 +1,9 @@
-<!--- *=* Copyright 1996, 1997 WebTV Networks, Inc. All rights reserved. --->
-<html>
-<head>
-	<display nooptions nostatus skipback clearback>
-	<title>Connecting</title>
-</head>
-
-<body bgcolor="#000000" text="#449944">
-<bgsound SRC="file://ROM/Cache/Music/DialingWebTV.mid" LOOP>
-<center>
-	<br><br><br><br>
-	<img src="/Images/ConnectingTo.gif" ani="/Animations/ConnectingTo.cel">
-	<br>
-	<img src="/Images/CityGlow.gif">
-	<br>
-	<img src="/Images/Spacer.gif" width=1 height=4>
-	<br>
-	<img src="/Images/CityRoad.gif" ani="/Animations/CityRoad.cel">
-</center>
-
-<br>
-<font color=808080>
-<spacer type=horizontal size=24><progressindicator name="progressindicator" height=44 width=240>
-</font>
-
-</body>
-</html>
+<html><head><display nooptions nostatus skipback clearback><title>Connecting</title></head><body bgcolor=#0 text=449944>
+<bgsound src=file://ROM/Cache/Music/DialingWebTV.mid loop>
+<center><br><br><br><br>
+	<img src=/Images/ConnectingTo.gif ani=/Animations/ConnectingTo.cel><br>
+	<img src=/Images/CityGlow.gif><br>
+	<img src=/Images/Spacer.gif width=1 height=4><br>
+	<img src=/Images/CityRoad.gif ani=/Animations/CityRoad.cel>
+</center><br>
+<font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240></font></body></html>
