--- a/src/tmp-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
@@ -1,89 +1,52 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://rom/JS/htv-header.js></script>
 <script src=file://rom/JS/NVRAM.js></script>
-</head><script>
-th=pp();
-head(th,'Advanced dialing options');
+</head><script>th=pp()
+head(th,'Advanced dialing options')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
 <spacer height=40 type=vertical>
 <td abswidth=20>
-<tr>
-<td>
-<td width=240 height=220 valign=top align=left>
+<tr><td><td width=240 height=220 valign=top align=left>
 <table cellspacing=0 cellpadding=0>
 <tr><td absheight=70 valign=top>
 <font size=-1>If you have voice mail service, try turning this option off.
 <tr><td absheight=70 valign=top>
 <font size=-1>For troubleshooting, turn this on to hear dialing.
 <tr><td valign=top>
-<font size=-1>Most phone lines work with medium dialing speed. If dialing only
-works sometimes, try changing the speed. </table>
+<font size=-1>Most phone lines work with medium dialing speed. If dialing only works sometimes, try changing the speed. </table>
 <td width=20>
 <td width=240 valign=top align=left>
 <form action=client:ConfirmPhoneSetup>
 <input type=hidden name=autosubmit value=true autosubmit=onleave>
 <table cellspacing=0 cellpadding=0>
 <tr><td absheight=70 valign=top>
-<table>
-<tr>
-<td valign=top>
+<table><tr><td valign=top>
 <input type=checkbox name=WaitForDialTone value=true checked=&dtone; selected>
-<input type=hidden name=WaitForDialTone value="">
-<td valign=top>
-Wait for dial tone
+<td valign=top>Wait for dial tone
 </table>
 <tr><td absheight=70 valign=top>
-<table>
-<tr>
-<td valign=top>
+<table><tr><td valign=top>
 <input type=checkbox name=AudibleDialing value=true checked=&audio;>
-<input type=hidden name=AudibleDialing value="">
-<td valign=top>
-Audible dialing
+<td valign=top>Audible dialing
 </table>
 <tr><td valign=top>
-<table>
-<tr>
-<td valign=top>
-<input type=radio name=dial-speed value=SLOW checked=&slow;>
-<td valign=top>
-Slow
-<tr>
-<td valign=top>
-<input type=radio name=dial-speed value=MEDIUM checked=&med;>
-<td valign=top>
-Medium
-<tr>
-<td valign=top>
-<input type=radio name=dial-speed value=FAST checked=&fast;>
-<td valign=top>
-Fast
-</table>
-</table>
-<tr>
-<td>
-<td colspan=4 height=10 valign=top align=left>
-<tr>
-<td colspan=4><hr>
-<tr>
-<td>
-<td colspan=4 height=7 valign=top align=left>
-<tr>
-<td>
-<tr>
-<td>
-<td colspan=4 height=1 valign=top align=left>
-<tr>
-<td>
-<tr>
-<td>
-<td colspan=4 height=4 valign=top align=left>
-<tr>
-<td>
-<td colspan=3 valign=top align=right>
-<script>butt(th, 'Done', 'Done', 103);</script>
-</form>
-<td>
-</table>
-</body>
+<table><tr><td valign=top>
+<input type=radio name=dial-speed value=slow checked=&slow;>
+<td valign=top>Slow
+<tr><td valign=top>
+<input type=radio name=dial-speed value=medium checked=&med;>
+<td valign=top>Medium
+<tr><td valign=top>
+<input type=radio name=dial-speed value=fast checked=&fast;>
+<td valign=top>Fast
+</table></table>
+<tr><td><td colspan=4 height=10 valign=top align=left>
+<tr><td colspan=4><hr>
+<tr><td><td colspan=4 height=7 valign=top align=left>
+<tr><td>
+<tr><td><td colspan=4 height=1 valign=top align=left>
+<tr><td>
+<tr><td><td colspan=4 height=4 valign=top align=left>
+<tr><td><td colspan=3 valign=top align=right>
+<script>butt(th,'Done','Done',103);</script></form></table>
