--- a/src/tmp-romfs/ROM/HTMLs/BYOISPIntro.html
+++ b/src/tmp-romfs/ROM/HTMLs/BYOISPIntro.html
@@ -1,45 +1,17 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline noreconnectalert>
+<html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://ROM/JS/htv-header.js></script>
 <script src=file://rom/JS/NVRAM.js></script>
-</head>
-<script>
-th = pp();
-head(th, 'Using your own ISP');
-</script>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td abswidth=34>
-<td colspan=3>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td valign=center absheight=40>
-</table>
+</head><script>th=pp();
+head(th,'Using your own ISP');
+</script><table cellspacing=0 cellpadding=0>
+<tr><td abswidth=34><td colspan=3>
+<spacer height=40 type=vertical>
 <td abswidth=20>
-<tr>
-<td>
-<td colspan=3 height=166 VALIGN=top ALIGN=left>
-If you already have an account with an Internet service provider (ISP), 
-you can use your ISP to connect to WebTV. Otherwise, choose <b>Use WebTV</b>.
-
-<p>In order to use your own ISP, you must have the dial-in or <i>modem</i>
-telephone number, your user name, and your password. 
-
-<p>If you choose <b>Use Your ISP</b>, you will only connect to WebTV through your
-own ISP. Your ISP has to support <i>PPP</i> and <i>PAP</i>. Your ISP will 
-be responsible for 
-the reliability of your connection.
+<tr><td><td colspan=3 height=166 VALIGN=top ALIGN=left>
+If you already have an account with an Internet service provider (ISP), you can use your ISP to connect to WebTV. Otherwise, choose <b>Use WebTV</b>.
+<p>In order to use your own ISP, you must have the dial-in or <i>modem</i> telephone number, your user name, and your password. 
+<p>If you choose <b>Use Your ISP</b>, you will only connect to WebTV through your own ISP. Your ISP has to support <i>PPP</i> and <i>PAP</i>. Your ISP will be responsible for the reliability of your connection.
 <br><br><br>
 <form action=client:GoToConfigureBYOISP>
-<tr>
-<td>
-<td colspan=3 valign=top align=right>
-<script>butt(th, 'Setup', 'Use Your ISP', 165)</script>
-&nbsp;
-<script>butt(th, 'Use WebTV', 'Use WebTV', 165)</script>
-</form>
-<td>
-</table>
-</body>
-</html>
+<tr><td><td colspan=3 valign=top align=right>
+<script>butt(th,'Setup','Use Your ISP',165)</script>&nbsp;<script>butt(th,'Use WebTV','Use WebTV',165)</script></form>
