--- a/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
@@ -2,8 +2,7 @@
 <script src=file://rom/JS/htv-header.js></script>
 <script src=file://rom/JS/NVRAM.js></script>
 <script src=file://rom/JS/BuildInfo.js></script>
-</head><script>
-th=pp()
+</head><script>th=pp()
 head(th,'About this HackTV build','','FridayEvilArr',5);
 </script><table>
 <tr><td width=20><td valign=top align=right width=120><shadow>Client ROM:</shadow>
@@ -16,15 +15,13 @@ head(th,'About this HackTV build','','FridayEvilArr',5);
 <tr><td><td valign=top align=right><shadow>Credits:</shadow>
 <td width=10><td valign=top height=180>
 Brought to you by the efforts of:<br>
-- eMac (rommy, rev engineering, much more)<br>
-- MattMan69 (themes, design, layout)<br>
-- zefie (coding, packing, distribution)<br>
-- Outa (rev engineering, hw discoveries)<br>
-- FairPlay137 (MAME development)<br>
-- SKCro (themes, design, optimization)<br>
-- WebTV Discord (for the lulz)<br>
+- <b>eMac</b> (rommy, rev engineering, much more)<br>
+- <b>MattMan69</b> (themes, design, layout)<br>
+- <b>zefie</b> (coding, packing, distribution)<br>
+- <b>Outa</b> (rev engineering, hw discoveries)<br>
+- <b>FairPlay137</b> (MAME development)<br>
+- <b>SKCro</b> (themes, design, optimization)<br>
+- <b><a href=javascript:alert('https://discord.gg/qke279EUa8')>WebTV Discord</a></b> (for the lulz)<br>
 <tr><td height=4>
-</table>
-<hr>
-<table>
-<tr><td width=600 align=right><form action='javascript:goHTV()'><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
+</table><hr>
+<table><tr><td width=600 align=right><form action='javascript:goHTV()'><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
