--- a/src/level0-romfs/ROM/HTMLs/HTMLv2.html
+++ b/src/level0-romfs/ROM/HTMLs/HTMLv2.html
@@ -1,7 +1,4 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-</head>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert></head>
 <script src=file://rom/h.js></script><script src=file://rom/n.js></script>
 <script>
 th = pp()
