--- a/src/level0-romfs/ROM/HTMLs/PowerOff.html
+++ b/src/level0-romfs/ROM/HTMLs/PowerOff.html
@@ -1,10 +1,1 @@
-<HTML>
-
-<HEAD>
-<DISPLAY NoStatus NoOptions ClearBack>
-</HEAD>
-
-<BODY  bgcolor="#000000">
-</BODY>
-
-</HTML>
+<html><head><display nostatus nooptions clearback></head><body bgcolor=#0></body></html>
