--- a/src/level0-romfs/ROM/HTMLs/htv.html
+++ b/src/level0-romfs/ROM/HTMLs/htv.html
@@ -1,14 +1,6 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
-</head>
-<script>
-th = pp();
-head(th);
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
+th=pp()
+head(th)
 goHTV()
-</script>
-<center>
-<h1>Redirecting... Please wait.</h1>
-<a href='javascript:goHTV()'>Click here if you aren't automatically redirected.
-</table>
+</script><center><h1>Redirecting... Please wait.</h1><a href=javascript:goHTV()>Click here if you aren't automatically redirected.</a>
