--- a/src/tmp-romfs/ROM/HTMLs/PowerOff.html
+++ b/src/tmp-romfs/ROM/HTMLs/PowerOff.html
@@ -1,11 +1,1 @@
-<!--- *=* Copyright 1996, 1997 WebTV Networks, Inc. All rights reserved. --->
-<HTML>
-
-<HEAD>
-<DISPLAY NoStatus NoOptions ClearBack>
-</HEAD>
-
-<BODY  bgcolor="#000000">
-</BODY>
-
-</HTML>
+<html><head><display nostatus nooptions clearback></head><body bgcolor=#0></body></html>
