--- a/src/tmp-romfs/ROM/HTMLs/htv.html
+++ b/src/tmp-romfs/ROM/HTMLs/htv.html
@@ -1,15 +1,7 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline noreconnectalert>
+<html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://ROM/JS/htv-header.js></script>
 <script src=file://rom/JS/NVRAM.js></script>
-</head>
-<script>
-th = pp();
-head(th);
+</head><script>th=pp()
+head(th)
 goHTV()
-</script>
-<center>
-<h1>Redirecting... Please wait.</h1>
-<a href='javascript:goHTV()'>Click here if you aren't automatically redirected.
-</table>
+</script><center><h1>Redirecting... Please wait.</h1><a href=javascript:goHTV()>Click here if you aren't automatically redirected.</a>
