--- a/src/level0-romfs/ROM/HTMLs/AccessNumber.html
+++ b/src/level0-romfs/ROM/HTMLs/AccessNumber.html
@@ -16,7 +16,7 @@ head(th,'Dialing access number')
 <p><input type=hidden name=autosubmit value=true autosubmit=onleave>
 <input type=text name=AccessNumber size=20 maxlength=31 bgcolor=444444 text=ffdd33 cursor=cc9933 numbers selected value=&anum;>
 </table>
-<table width=550>
+<table width=480>
 <tr><td colspan=4 height=4 valign=top align=left><hr>
-<tr><td colspan=4 height=20 valign=top align=left>
-<tr><td><td colspan=3 valign=top align=right><script>butt(th,'Done','Done',103)</script></form>
+<tr><td height=20 valign=top align=left>
+<tr><td colspan=4 valign=top align=right><script>butt(th,'Done','Done',103)</script></form>
