--- a/src/level0-romfs/ROM/HTMLs/SecretPhoneSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/SecretPhoneSetup.html
@@ -18,7 +18,7 @@ head(th,'Obscure dialing options','','AliveAtDawn')
 <tr><td valign=top colspan=3><table><tr><td valign=top align=right>
 	<font size=-1>Long-distance<br>prefix</font>
 	<td>&nbsp;<td valign=top align=left>
-	<input type=text name=LongDistancePrefix bgcolor=444444 text=ffdd33 cursor=cc9933 size=4 maxlength=16 numbers value=&ldp; selected>
+	<input type=text name=LongDistancePrefix bgcolor=444444 text=ffdd33 cursor=cc9933 size=4 maxlength=16 numbers selected value=&ldp;>
 </table>
 <tr><td absheight=13>
 <tr><td align=right><font size=-1>800 access</font><br>
@@ -36,4 +36,5 @@ head(th,'Obscure dialing options','','AliveAtDawn')
 </table></table>
 <tr><td absheight=40>
 <tr><td>
-<td colspan=3 valign=top align=right><hr><script>butt(th,'Connect','Connect',150)</script></form></table>
+<td colspan=3 valign=top align=right><hr><script>butt(th,'Connect','Connect',150); butt(th,'Back','Back',150,'','onclick=goHTV()')</script>
+</form></table>
