--- a/src/level0-romfs/ROM/HTMLs/PhoneCallWaiting.html
+++ b/src/level0-romfs/ROM/HTMLs/PhoneCallWaiting.html
@@ -29,11 +29,10 @@ head(th,'Call waiting options')
 <tr><td absheight=3>
 <tr><td valign=top colspan=3><font size=-1><i>example:</i><tt>*70,</tt></font>
 </table>
-<tr><td><td colspan=4 height=7 valign=top align=left>
 <tr><td>
 <tr><td><td colspan=4 height=1 valign=top align=left>
 <tr><td>
 <tr><td><td colspan=4 height=24 valign=top align=left>
 <tr><td><td colspan=3 valign=top align=right>
-<script>butt(th,'Adjust Sensitivity','Adjust Sensitivity',190,'','onclick=go("file://rom/HTMLs/PhoneCallWaitThresh.html")')</script>
-<script>butt(th,'Done','Done',190)</script>
+<script>butt(th,'Adjust Sensitivity','Adjust Sensitivity',190,'','onclick=go("file://rom/HTMLs/PhoneCallWaitThresh.html")')
+butt(th,'Done','Done',190)</script>
