--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
@@ -24,6 +24,7 @@ head(th,'Phone & Dialing Settings','large','Ghosttown')
 <img src=file://rom/Images/Spacer.gif width=1 height=12><br>
 <a href=AdvancedPhoneSetup.html><blackface>Advanced</blackface></a><br>
 <font size=-1>Set audible dialing, speed, wait for dialtone</font><br>
+<img src=file://rom/Images/Spacer.gif width=1 height=12><br>
 <a href=PhoneReset.html><blackface>Reset</blackface></a><br>
 <font size=-1>Original settings for dialing options</font><br>
 <tr><td><td colspan=4 height=7 valign=top align=left>
@@ -32,4 +33,4 @@ head(th,'Phone & Dialing Settings','large','Ghosttown')
 <tr><td><td colspan=2 height=4 valign=top align=left>
 <tr><td><td colspan=2 height=1 valign=top align=left><font size=-1><i>Choose</i> Done <i>to return to HTV.</i></font>
 <td valign=top align=right>
-<form action=javascript:goHTV()><script>butt(th,'Done','Done',103)</script></form></table>
+<form action=javascript:goHTV()><script>butt(th,'Done','Done',103); nbsp(3);</script></form></table>
