--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetup.html
@@ -16,7 +16,7 @@ head(th,'Dialing options')
 <form action=client:ConfirmPhoneSetup>
 <input type=hidden name=autosubmit value=true autosubmit=onleave>
 <table cellspacing=0 cellpadding=0>
-<tr><td align=right width=70><td width=140>Prefix: <input type=text name=DialOutsidePrefix bgcolor=444444 text=ffdd33 cursor=cc9933 size=4 maxlength=16 numbers value=&outstr; selected>
+<tr><td align=right width=70><td width=140>Prefix: <input type=text name=DialOutsidePrefix bgcolor=444444 text=ffdd33 cursor=cc9933 size=4 maxlength=16 numbers selected value=&outstr;>
 <tr><td align=right height=28 width=70><td width=140><i>example: 9</i>
 <tr><td height=70>
 <tr><td align=right><td width=160>
