--- a/src/tmp-romfs/ROM/HTMLs/HackTV.html
+++ b/src/tmp-romfs/ROM/HTMLs/HackTV.html
@@ -25,7 +25,7 @@ window.onload = doMenu;
 <spacer height=9 type=block><td valign=top>
 <table><td valign=top>
 <center><spacer width=2 height=2 type=block>
-<form name=msg><textarea rows=11 size=29 id=alert name=box border=1 text=b5b5b5 bgcolor=191919 nohighlight noselect></textarea></form>
+<form name=msg><script>ta(th,11,29,'box',1,'','nohighlight noselect')</script></form>
 </table>&nbsp;<script>as(th,'',10,256,0,1)</script>
 <table><tr><td><form name=ua><select name=um onchange=doMenu() width=272 onmouseover=urlInfo()>
 <option value=file://rom/HTMLs/BuildInfo.html selected>file://rom/HTMLs/BuildInfo.html</option>
