--- a/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
@@ -20,7 +20,7 @@ Brought to you by the efforts of:<br>
 - <b>Outa</b> (rev engineering, hw discoveries)<br>
 - <b>FairPlay137</b> (MAME development)<br>
 - <b>SKCro</b> (themes, design, optimization)<br>
-- <b><a href=javascript:alert('https://discord.gg/qke279EUa8')>WebTV Discord</a></b> (for the lulz)<br>
+- <b><a href=javascript:alert('https://zef.pw/wtvdiscord')>WebTV Discord</a></b> (for the lulz)<br>
 <tr><td height=4>
 </table><hr>
 <table><tr><td width=600 align=right><form action='javascript:goHTV()'><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
