--- a/src/level0-romfs/ROM/HTMLs/ConnectSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/ConnectSetup.html
@@ -6,8 +6,10 @@
 head(th,'Connect Setup v2.6','','karTV',5);
 window.onload=uS;
 </script><form name=c action=client:ConfirmConnectSetup>
-<table width=100% cellspacing=1 cellpadding=0><tr><td colspan=3>&nbsp;Server:</td>
-<td><select width=440 name=p onchange=uS() selected>
+<table width=100% cellspacing=1 cellpadding=0>
+<tr><td height=18>
+<tr><td colspan=3>&nbsp;Server:</td>
+<td><select width=420 name=p onchange=uS() selected>
 <option value=htv>MattMan's (HTV) MiniSrv</option>
 <option value=htvb>MattMan's (HTV) MiniSrv Backup</option>
 <option value=mm69>MattMan's Revival Srv.</option>
@@ -27,7 +29,7 @@ window.onload=uS;
 <table cellspacing=1 cellpadding=0>
 <tr><td height=1>
 <tr><td colspan=2>&nbsp;Info:<br><br><td>
-<tr><td width=20><td width=390 align=left valign=top>
+<tr><td width=20><td width=288 align=left valign=top>
 <form name=i><script>ta(th,4,46,'msg',0,'','nohighlight noselect',1)</script></form>
 <td><td width=100% align=right valign=top>
 <font size=-2><input type=hidden name=useEncryption value=true><script>butt(th,'Connect','Connect',170);</script></font>	
