--- a/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
@@ -29,7 +29,7 @@ window.onload=uS;
 <tr><td height=1>
 <tr><td colspan=2>&nbsp;Info:<br><br><td>
 <tr><td width=20><td width=288 align=left valign=top>
-<form name=i><script>ta(th,4,46,'msg',0,'','nohighlight noselect',1)</script></form>
+<form name=i><font size=-1><script>ta(th,4,46,'msg',0,'','nohighlight noselect',1)</script></font></form>
 <td><td width=100% align=right valign=top>
 <font size=-2><input type=hidden name=useEncryption value=true><script>butt(th,'Connect','Connect',170);</script></font>	
 </form>
