update theme system

--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
@@ -32,4 +32,4 @@ head(th,'Phone & Dialing Settings','large','Ghosttown')
 <tr><td><td colspan=2 height=4 valign=top align=left>
 <tr><td><td colspan=2 height=1 valign=top align=left><font size=-1><i>Choose</i> Done <i>to return to HTV.</i></font>
 <td valign=top align=right>
-<form action=javascript:goHTV()><script>butt(th,'Done','Done',103); nbsp(3);</script></form></table>
+<form action=javascript:goHTV()><script>butt(th,'Done','Done',103); d.write(nbsp(3));</script></form></table>
