update theme system

--- a/src/level0-romfs/ROM/HTMLs/HackTV.html
+++ b/src/level0-romfs/ROM/HTMLs/HackTV.html
@@ -39,8 +39,8 @@ window.onload = doMenu;
 <option value=client:>client:</option>
 <option value=wtv->wtv-</option>
 </select>
-<input type=text name=vu value="" border=1 bgcolor=191919 text=b5b5b5 cursor=3e4360 align=center width=214 executeurl asciionly autoactivate onmouseover=urlInfo()>
-<spacer type=block width=5>
-<script>butt(th,'Go','',58,'','onmouseover=urlInfo()')</script>
+<script>d.write('<input type=text name=vu value="" border=1 bgcolor='+gTC(th,'bg')+' text='+gTC(th,'t')+' cursor='+gTC(th,'t')+' align=center width=214 executeurl asciionly autoactivate onmouseover="urlInfo()">')</script>
+<spacer type=block width=2>
+<script>butt(th,'Go','',56,'','onmouseover=urlInfo()')</script>
 </form>
 </table></td></tr>
