--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
@@ -1,6 +1,6 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://rom/h.js></script><script src=file://rom/n.js></script><script>
-r=d.referrer
+r=history.previous
 if(r==rom+'HTMLs/Themes.html'||r==rom+'HTMLs/PhoneCallWaitThresh.html'||r==rom+'HTMLs/BGM.html'||r==rom+'HTMLs/NVRAM.html'){go(r)}
 </script></head><script>
 th=pp()
