--- a/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
@@ -1,51 +1,26 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
-<script src=file://rom/JS/BuildInfo.js></script>
-</head>
-<script>
-th = pp()
-head(th,'medium','loop1',5,'About this HackTV build');
-</script>
-
-<table>
-<tr>
-<td width=20>
-<td valign=top align=right width=120><shadow>Client ROM:</shadow>
-<td width=10>
-<td valign=top>Version &wtv-appvers;-<script>d.write(bI('version'));</script>
-<tr>
-<td>
-<td valign=top align=right><shadow>ROM Type:</shadow>
-<td width=10>
-<td valign=top><script>d.write(bI('romtype'));</script>
-<tr>
-<td>
-<td valign=top align=right><shadow>ROM Pack Date:</shadow>
-<td width=10>
-<td valign=top><script>d.write(bI('packed_date'));</script>
-<tr>
-<td height=10>
-<tr>
-<td>
-<td valign=top align=right><shadow>Credits:</shadow>
-<td width=10>
-<td valign=top height=180>
+<html><head><display nooptions noscroll allowoffline noreconnectalert>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
+<script src=file://rom/JS/BuildInfo.js></script></head><script>
+th=pp()
+head(th,'About this HackTV build','','WTVa','');
+</script><table>
+<tr><td width=20><td valign=top align=right width=120><shadow>Client ROM:</shadow>
+<td width=10><td valign=top>Version &wtv-appvers;-<script>d.write(bI('version'));</script>
+<tr><td><td valign=top align=right><shadow>ROM Type:</shadow>
+<td width=10><td valign=top><script>d.write(bI('romtype'));</script>
+<tr><td><td valign=top align=right><shadow>ROM Pack Date:</shadow>
+<td width=10><td valign=top><script>d.write(bI('packed_date'));</script>
+<tr><td height=10>
+<tr><td><td valign=top align=right><shadow>Credits:</shadow>
+<td width=10><td valign=top height=180>
 Brought to you by the efforts of:<br>
-- eMac (rommy, rev engineering, much more)<br>
-- MattMan69 (themes, design, layout)<br>
-- zefie (coding, packing, distribution)<br>
-- Outa (rev engineering, hw discoveries)<br>
-- FairPlay137 (MAME development)<br>
-- SKCro (themes, design, optimization)<br>
-- WebTV Discord (for the lulz)<br>
-<tr>
-<td height=4>
-</table>
-<hr>
-<table>
-<tr>
-<td width=600 align=right>
-<form action='javascript:goHTV()'><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
+- <b>eMac</b> (rommy, rev engineering, much more)<br>
+- <b>MattMan69</b> (themes, design, layout)<br>
+- <b>zefie</b> (coding, packing, distribution)<br>
+- <b>Outa</b> (rev engineering, hw discoveries)<br>
+- <b>FairPlay137</b> (MAME development)<br>
+- <b>SKCro</b> (themes, design, optimization)<br>
+- <b><a href="javascript:gsa('Join the WebTV/MSNTV Discord!<br><br>https://zef.pw/wtvdiscord',rom+'Images/discord.gif','Ugh fine, I\'ll type it','','No Thanks')">WebTV Discord</a></b> (for the lulz)<br>
+<tr><td height=4>
+</table><hr>
+<table><tr><td width=600 align=right><form action='javascript:goHTV()'><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
