more extremely stupid optimizations
I love removing whitespace

--- a/src/tmp-romfs/ROM/HTMLs/HTMLv2.html
+++ b/src/tmp-romfs/ROM/HTMLs/HTMLv2.html
@@ -1,9 +1,7 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
 head(th,'HTML Sandbox v2.0')
-</script><spacer width=1 height=5 type=block>
-<script>function hV(){
+</script><spacer width=1 height=5 type=block><script>function hV(){
 	poo=d.a.sel[d.a.sel.selectedIndex].value;
 	switch(poo){
 		case 'html':
