--- a/src/tmp-romfs/ROM/HTMLs/TechInfoInternal.html
+++ b/src/tmp-romfs/ROM/HTMLs/TechInfoInternal.html
@@ -1,7 +1,6 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://rom/h.js></script><script src=file://rom/n.js></script>
-<script src=file://ROM/JS/BuildInfo.js></script></head><script>
-th=pp()
+<script src=file://ROM/JS/BuildInfo.js></script></head><script>th=pp()
 head(th,'WebTV Technical Information','','tymplingA')
 </script><table width=100%>
 <tr><td width=50><td width=150 valign=top align=right><shadow>Boot ROM:</shadow><td width=10><td valign=top>Version &wtv-bootvers;
