--- a/src/tmp-romfs/ROM/HTMLs/AccessNumber.html
+++ b/src/tmp-romfs/ROM/HTMLs/AccessNumber.html
@@ -1,8 +1,6 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp()
-head(th,'Dialing access number')
-</script><table cellspacing=0 cellpadding=0>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+head(th,'Dialing access number')</script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
 <spacer height=40 type=vertical>
 <td abswidth=20>
