--- a/src/tmp-romfs/ROM/HTMLs/BGM.html
+++ b/src/tmp-romfs/ROM/HTMLs/BGM.html
@@ -1,20 +1,18 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
 bgm=gV(z_nv,1)
 function doSubmit(c){if(c){sB(z_nv,1,c)}}
 function doLoad(){document.r.l.selectedIndex=bgm}
 head(th,'Background Music Settings','large',z_bgm[bgm],-1)
-window.onload=doLoad
-</script>
+window.onload=doLoad</script>
 <spacer Width=30 Height=6 type=vertical>
 <table cellspacing=0 cellpadding=0><tr><td abswidth=14><td colspan=3><spacer height=40 type=vertical><td>
 	<tr><td><td width=250 height=230 valign=top align=left>
 		<table cellspacing=0 cellpadding=0>
 			<tr><td absheight=250 valign=top>
 				<font size=-1> Please select the background music you would like to play on the HackTV Homepage from the drop down on the right. Click done when finished.
-				<p><br><p><br><font SIZE=-1>Your current Background Music is <script>d.write(z_bgm[bgm])</script>.<br><br><br>
-				<script>as(th, '', '', 250, 0, 1)</script>
+				<p><br><p><br><font size=-1>Your current Background Music is <script>d.write(z_bgm[bgm])</script>.<br><br><br>
+				<script>as(th,'','',250,0,1)</script>
 			<tr>
 		</table>
 	<td width=60><td width=230 valign=top align=left>
@@ -25,5 +23,5 @@ window.onload=doLoad
 				</select></form>
 		<table><tr><td valign=top align=left></table></table>
 		<spacer height=190 type=vertical>
-		<form action=client:gotoadvancedsetup><script>butt(th, 'Done', 'Done', 160);</script></form>
+		<form action=client:gotoadvancedsetup><script>butt(th,'Done','Done',160);</script></form>
 </td></tr></table>
