--- a/src/tmp-romfs/ROM/HTMLs/ConfigureBYOISP.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConfigureBYOISP.html
@@ -1,10 +1,7 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp();
-head(th,'Use your own ISP','','snowy1');
-</script><table cellspacing=0 cellpadding=0>
-<tr><td colspan=4>
-<spacer height=30 type=vertical>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+head(th,'Use your own ISP','','snowy1')</script><table cellspacing=0 cellpadding=0>
+<tr><td colspan=4><spacer height=30 type=vertical>
 <tr><td abswidth=34><td width=220 height=166 valign=top align=left><table cellspacing=0 cellpadding=0>
 <tr><td absheight=45 valign=top><font size=-1>Check this box and fill in the blanks to use your own Internet service provider.
 <tr><td absheight=38 valign=middle><font size=-1>Login name
@@ -19,10 +16,9 @@ head(th,'Use your own ISP','','snowy1');
 	<input type=hidden name=BYOISPProviderName value=&pname;>
 	<input type=checkbox name=BYOISPSelected value=true checked=&byoisp; selected><font size=-1><td>&nbsp;
 <td valign=top align=left></font></table>
-<tr><td absheight=38 valign=middle colspan=3><table><tr><td valign=top align=left><input type=text name=BYOISPLoginName bgcolor=#444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 value=&lname;></table>
+<tr><td absheight=38 valign=middle colspan=3><table><tr><td valign=top align=left><input type=text name=BYOISPLoginName bgcolor=444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 value=&lname;></table>
 <tr><td absheight=38 valign=middle colspan=3><table><tr><td valign=top align=left><input type=password name=BYOISPPassword bgcolor=444444 text=ffdd33 cursor=cc9933 size=18 maxlength=18 value=&bpass;></table>
 <tr><td absheight=38 valign=top colspan=3><table><tr><td valign=top align=left><input type=text name=BYOISPAccessNumber bgcolor=444444 text=ffdd33 cursor=cc9933 size=18 maxlength=18 numbers value=&banum;></table>
 <tr><td absheight=38 valign=top colspan=3><table><tr><td valign=top align=left><input type=text name=BYOISPAccessNumber2 bgcolor=444444 text=ffdd33 cursor=cc9933 size=18 maxlength=18 numbers value=&banm2;></table>
-</table>
-<tr><td><td colspan=4 height=47 valign=top align=left>
+</table><tr><td><td colspan=4 height=47 valign=top align=left>
 <tr><td colspan=4 valign=top align=right><script>butt(th,'Done','Done',103);</script></form>
