--- a/src/tmp-romfs/ROM/HTMLs/ConnectingMessageWatch.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConnectingMessageWatch.html
@@ -1,53 +1,13 @@
-<!--- *=* Copyright 1996, 1997 WebTV Networks, Inc. All rights reserved. --->
-<html>
-<head>
-	<display nostatus nooptions nosave nosend>
-	<title>MessageWatch</title>
-</head>
-
-<body bgcolor="#0" text="#42CC55" fontsize="large" hspace=0 vspace=0>
-
-<table cellspacing=0 cellpadding=0>
-	<tr>
-		<td width=104 height=74 valign=middle align=center bgcolor="3B3A4D">
-			<img src="file://ROM/Cache/WebTVLogoJewel.gif" width=86 height=64>
-
-		<td width=20 valign=top align=left bgcolor="3B3A4D">
-			<spacer>
-
-		<td colspan=2 width=436 valign=middle align=left bgcolor="3B3A4D">
-			<font color="D6DFD0" size="+2"><blackface><shadow>
-				<spacer type=block width=1 height=4>
-				<br>
-					Checking for mail
-				</shadow>
-				</blackface>
-			</font>
-
-	<tr>
-		<td width=104 height=20>
-		<td width=20>
-		<td width=416>
-		<td width=20>
-
-
-	<tr>
-		<td colspan=2>
-		<td>
-			<font size=+1>
-				Your Internet terminal is contacting WebTV to check for mail.
-				It will power off automatically when the connection is finished.
-
-				<p>This usually takes less than two minutes.
-
-				<p>Powering off now will cancel the check<br>for today.
-
-</table>
-
-<spacer type=vertical size=42><br>
-<font color=808080>
-<spacer type=horizontal size=32><progressindicator name="progressindicator" height=44 width=240>
-</font>
-
-</body>
-</html>
+<html><head><display nostatus nooptions nosave nosend><title>MessageWatch</title></head>
+<body bgcolor=#0 text=42cc55 fontsize=large hspace=0 vspace=0>
+<table cellspacing=0 cellpadding=0><tr>
+	<td width=104 height=74 valign=middle align=center bgcolor=3b3a4d><img src=file://ROM/Cache/WebTVLogoJewel.gif width=86 height=64>
+	<td width=20 valign=top align=left bgcolor=3b3a4d><spacer>
+	<td colspan=2 width=436 valign=middle align=left bgcolor=3b3a4d>
+		<font color=d6dfd0 size=+2><blackface><shadow>
+			<spacer type=block width=1 height=4><br>Checking for mail
+		</shadow></blackface></font>
+	<tr><td width=104 height=20><td width=20><td width=416><td width=20>
+	<tr><td colspan=2><td><font size=+1>Your Internet terminal is contacting WebTV to check for mail. It will power off automatically when the connection is finished.
+		<p>This usually takes less than two minutes.<p>Powering off now will cancel the check<br>for today.
+</table><spacer type=vertical size=42><br><font color=808080><spacer type=horizontal size=32><progressindicator name=progressindicator height=44 width=240></font>
