--- a/src/tmp-romfs/ROM/HTMLs/NVRAM.html
+++ b/src/tmp-romfs/ROM/HTMLs/NVRAM.html
@@ -1,16 +1,13 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp()
-head(th, 'NVRAM Test Page');
-</script><h1>NVRAM Test:</h1>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
+</head><script>th=pp()
+head(th, 'NVRAM Test Page');</script><h1>NVRAM Test:</h1>
 <table border=1><tr><td colspan=99>NVRAM Contents
-<tr><td>Data:</td>
-<script>
+<tr><td>Data:</td><script>
 for(i=0;i<z_nv.length;i++){d.write('<td>'+z_nv.charAt(i)+'</td>');}
 d.write('<tr><td>Byte:</td>')
 for(i=0;i<z_nv.length;i++){document.write('<td>'+i+'</td>');}
-</script>
-</table>
+</script></table>
 <a href=javascript:sB(z_nv,5,0)>Set byte 5 to 0</a><br>
 <a href=javascript:sB(z_nv,5,1)>Set byte 5 to 1</a><br>
 <a href=javascript:sB(z_nv,15,0)>Set byte 15 to 0</a><br>
