--- a/src/tmp-romfs/ROM/HTMLs/PhoneCallWaiting.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneCallWaiting.html
@@ -1,6 +1,5 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
 head(th,'Call waiting options')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
